--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "dependencies": {
     "express": "^4.15.3",
     "socket.io": "^2.0.3"
+  },
+  "engines": {
+    "node":"",
+    "npm":""
   }
 }
